--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: Deepa SobhanaDevi
+logo: "/images/prof photo linkedin.png?raw=true"
+description: > # your text below (remove <br> elements if you don't need line breaks)
+ I am a passionate data scientist fascinated by the opportunities created by the abundance of available data and computing power in the software industry
+  <br><br>
+ I am a self-taught data scientist eager to use my academic experience to support the next major revolution in data analysis.
+  <br><br>
+  <a href="https://www.linkedin.com/in/deepa-sobhana-devi/">View My LinkedIn Profile</a> 
 theme: jekyll-theme-cayman
