--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Deepa SobhanaDevi
-logo: "/images/prof photo linkedin.png?raw=true"
+logo: "/Images/prof photo linkedin.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
  I am a passionate data scientist fascinated by the opportunities created by the abundance of available data and computing power in the software industry
   <br><br>
