--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Deepa SobhanaDevi
 logo: "/Images/prof photo linkedin.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
  A passionate data scientist fascinated by the opportunities created by the abundance of available data and computing power in the software industry
-  <br><br>
- #I am a self-taught data scientist eager to use my academic experience to support the next major revolution in data analysis.
+
+ A self-taught data enthusiast eager to use my academic experience to support the next major revolution in data analysis.
   <br><br>
   <a href="https://www.linkedin.com/in/deepa-sobhana-devi/">View My LinkedIn Profile</a> 
 theme: jekyll-theme-minimal
