--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Deepa SobhanaDevi
 logo: "/Images/prof photo linkedin.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
- A passionate data scientist fascinated by the opportunities created by the abundance of available data and computing power in the software industry
-
- A self-taught data enthusiast eager to use my academic experience to support the next major revolution in data analysis.
-  <br><br>
-  <a href="https://www.linkedin.com/in/deepa-sobhana-devi/">View My LinkedIn Profile</a> 
+ A passionate data scientist fascinated by the opportunities created by the abundance of available data and computing power in the software industry.
+<br>
+ A self-taught data enthusiast eager to use her academic experience to support the next major revolution in data analysis.
+<br><br>
+<a href="https://www.linkedin.com/in/deepa-sobhana-devi/">View My LinkedIn Profile</a> 
 theme: jekyll-theme-minimal
