--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ description: > # your text below (remove <br> elements if you don't need line br
  <br><br>
  A self-taught data enthusiast eager to use her academic experience to support the next major revolution in data analysis.
  <br><br>
- <a href="https://www.linkedin.com/in/deepasdevi/">View My LinkedIn Profile</a> 
+ <a href="https://www.linkedin.com/in/deepasdevi">View My LinkedIn Profile</a> 
 theme: jekyll-theme-minimal
